--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+edict (0.1.3) zelazny; urgency=low
+
+  * Split theme into default and azbooka
+
+ -- Alexander Kerner <lunohod@openinkpot.org>  Sun, 28 Mar 2010 23:42:18 +0200
+
 edict (0.1.2) zelazny; urgency=low
 
   * Fix .desktop file
