--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+edict (0.1.4) zelazny; urgency=low
+
+  * Add icon to .desktop file
+
+ -- Mikhail Gusarov <dottedmag@dottedmag.net>  Wed, 31 Mar 2010 03:29:23 +0700
+
 edict (0.1.3) zelazny; urgency=low
 
   * Split theme into default and azbooka
