--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+edict (0.1.5) zelazny; urgency=low
+
+  * Speedup loading dictionaries
+
+ -- Alexander Kerner <lunohod@openinkpot.org>  Thu, 20 May 2010 21:52:17 +0200
+
 edict (0.1.4) zelazny; urgency=low
 
   * Add icon to .desktop file
