--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+edict (0.1.7) zelazny; urgency=low
+
+  [ Tomasz Długosz ]
+  * l10n: Updates to Polish (pl) translation
+  * l10n: initial hungarian translation
+
+  [ Alexander Kerner ]
+  * Add ability to correct last entered text
+
+ -- Alexander Kerner <lunohod@openinkpot.org>  Thu, 08 Jul 2010 11:03:10 +0200
+
 edict (0.1.6) zelazny; urgency=low
 
   * Adjustment to new ecore API
