--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+edict (0.1.6.bradbury.2) bradbury; urgency=low
+
+  * Show help text instead of empty page
+
+ -- Alexander Kerner <lunohod@openinkpot.org>  Sun, 11 Jul 2010 14:13:47 +0200
+
 edict (0.1.6.bradbury.1) bradbury; urgency=low
 
   * Build for bradbury
