--- a/po/uk.po
+++ b/po/uk.po
@@ -7,14 +7,12 @@ msgstr ""
 "Project-Id-Version: edict 0.1\n"
 "Report-Msgid-Bugs-To: lunohod@openinkpot.org\n"
 "POT-Creation-Date: 2010-07-11 13:42+0200\n"
-"PO-Revision-Date: Sat, 27 Mar 2010 15:49:18 +0100\n"
+"PO-Revision-Date: Thu, 15 Jul 2010 10:44:40 +0200\n"
 "Last-Translator: Alexander Kerner <lunohod@openinkpot.org>\n"
-"Language-Team: Russian\n"
+"Language-Team: Ukranian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
-"|| n%100>=20) ? 1 : 2);\n"
 
 #: src/edict.c:54
 #, c-format
@@ -26,19 +24,16 @@ msgstr "<br>Нажмите %s для ввода текста для поиска
 
 #: src/edict.c:199 src/edict.c:202
 msgid "Search"
-msgstr "Поиск"
+msgstr "Пошук"
 
 #: src/edict.c:269
 msgid "Dictionary"
-msgstr "Словарь"
+msgstr "Словник"
 
 #: src/edict.c:293
 msgid "No dictionaries found"
-msgstr "Словари не найдены"
+msgstr "Файлів словника не знайдено"
 
 #: src/picodict.c:39
 msgid "No results"
-msgstr "Нет результатов"
-
-#~ msgid "Dictionary: Help"
-#~ msgstr "Словарь: Справка"
+msgstr "Не знайдено"
