Prepare changelog for upload

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+edict (0.1.10) zelazny; urgency=low
+
+  * Update translations
+  * Update help text and its translations
+
+ -- Alexander Kerner <lunohod@openinkpot.org>  Fri, 16 Jul 2010 15:23:48 +0200
+
 edict (0.1.9) zelazny; urgency=low
 
   * Show help text instead of empty page
