--- a/po/uk.po
+++ b/po/uk.po
@@ -7,14 +7,12 @@ msgstr ""
 "Project-Id-Version: edict 0.1\n"
 "Report-Msgid-Bugs-To: lunohod@openinkpot.org\n"
 "POT-Creation-Date: 2010-07-16 15:19+0200\n"
-"PO-Revision-Date: Sat, 27 Mar 2010 15:49:18 +0100\n"
+"PO-Revision-Date: Thu, 15 Jul 2010 10:44:40 +0200\n"
 "Last-Translator: Alexander Kerner <lunohod@openinkpot.org>\n"
-"Language-Team: Russian\n"
+"Language-Team: Ukranian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
-"|| n%100>=20) ? 1 : 2);\n"
 
 #: src/edict.c:54
 #, c-format
@@ -22,24 +20,21 @@ msgid ""
 "<br>Press %s to enter text for search.<br>Press %s to correct last entered "
 "text and search again."
 msgstr ""
-"<br>Нажмите %s, чтобы ввести текст для поиска.<br>Нажмите %s для корректировки "
-"последнего введённого текста и повторного поиска."
+"<br>Натиснiть %s для того щоб ввести текст пошуку.<br>Натиснiть %s для редагування "
+"останього введеного тексту та повторного пошуку."
 
 #: src/edict.c:196 src/edict.c:199
 msgid "Search"
-msgstr "Поиск"
+msgstr "Пошук"
 
 #: src/edict.c:266
 msgid "Dictionary"
-msgstr "Словарь"
+msgstr "Словник"
 
 #: src/edict.c:290
 msgid "No dictionaries found"
-msgstr "Словари не найдены"
+msgstr "Файлів словника не знайдено"
 
 #: src/picodict.c:39
 msgid "No results"
-msgstr "Нет результатов"
-
-#~ msgid "Dictionary: Help"
-#~ msgstr "Словарь: Справка"
+msgstr "Не знайдено"
